[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/Slime_Medium_Green.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/Slimes/SlimeInfo.gd" type="Script" id=2]
[ext_resource path="res://Font/UIFont.tres" type="Theme" id=3]
[ext_resource path="res://Font/UIFontSmall.tres" type="Theme" id=4]
[ext_resource path="res://Font/PressStart2P-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/Redo.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.607843, 0.611765, 0.0352941, 1 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/VBoxContainer2/Panel/SlimeSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/VBoxContainer/ProgressBar:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 60 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "SlimeClicked"
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/VBoxContainer2/Panel/SlimeSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 4.2, 4.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/VBoxContainer/ProgressBar:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 60 ), Vector2( 0, 60 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Slimeidled"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.631373, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="SlimeInfo" type="Panel"]
margin_right = 480.0
margin_bottom = 80.0
rect_min_size = Vector2( 30, 80 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 4.0
margin_right = 531.0
margin_bottom = 61.0
custom_constants/separation = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 50.0
margin_bottom = 72.0
rect_min_size = Vector2( 50, 50 )

[node name="Panel" type="Control" parent="HBoxContainer/VBoxContainer2"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="SlimeSprite" type="Sprite" parent="HBoxContainer/VBoxContainer2/Panel"]
position = Vector2( -36, -39 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
offset = Vector2( 16, 16 )

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer2/Panel"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -2.0
margin_right = 60.0
margin_bottom = 51.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 62.0
margin_right = 270.0
margin_bottom = 72.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 208.0
margin_bottom = 11.0

[node name="SlimeName" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 66.0
margin_bottom = 11.0
theme = ExtResource( 3 )
text = "George"

[node name="SlimeSuffix" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 70.0
margin_right = 169.0
margin_bottom = 11.0
theme = ExtResource( 3 )
text = "the Slime"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 208.0
margin_bottom = 30.0

[node name="AssignButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 0.188235, 1, 0.403922, 1 )
margin_right = 111.0
margin_bottom = 15.0
theme = ExtResource( 4 )
text = "ASSIGN TASK"

[node name="StopTaskButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 115.0
margin_right = 208.0
margin_bottom = 15.0
theme = ExtResource( 4 )
text = "STOP TASK"

[node name="WorkingOnLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 208.0
margin_bottom = 43.0
theme = ExtResource( 4 )
text = "Current Work:"

[node name="CurrentJobLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 208.0
margin_bottom = 56.0
theme = ExtResource( 4 )
text = "- Nothing"

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 208.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 5 )
custom_styles/fg = SubResource( 4 )
value = 50.0

[node name="RerunSprite" type="Sprite" parent="HBoxContainer"]
position = Vector2( 29, 61 )
texture = ExtResource( 6 )

[node name="OutputLabel" type="Label" parent="HBoxContainer"]
margin_left = 282.0
margin_top = 21.0
margin_right = 462.0
margin_bottom = 51.0
rect_min_size = Vector2( 180, 30 )
theme = ExtResource( 4 )
text = "OUTPUT: 2 Rocks per second"
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 5.0
anims/RESET = SubResource( 2 )
anims/SlimeClicked = SubResource( 3 )
anims/Slimeidled = SubResource( 6 )

[connection signal="button_down" from="HBoxContainer/VBoxContainer2/Panel/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/HBoxContainer/AssignButton" to="." method="_on_AssignButton_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/HBoxContainer/StopTaskButton" to="." method="_on_StopTaskButton_button_down"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
